<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color2"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_area_select"
            android:layout_width="0dp"
            android:layout_height="@dimen/common_view_height"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/common_left_margin"
            android:layout_marginTop="@dimen/common_top_margin"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/input_bg2"
            android:focusable="true"
            android:text="@string/area_select"
            android:textColor="@color/text_color2"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_stock_select"
            android:layout_width="0dp"
            android:layout_height="@dimen/common_view_height"
            android:maxLines="1"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="@dimen/common_right_margin"
            android:layout_marginTop="@dimen/common_top_margin"
            android:layout_weight="1"
            android:ellipsize="end"
            android:background="@drawable/input_bg2"
            android:focusable="true"
            android:text="@string/stock_select"
            android:textColor="@color/text_color2"
            android:textSize="16sp" />
    </LinearLayout>


    <EditText
        android:id="@+id/edit_keywords"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_view_height"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/common_left_margin"
        android:layout_marginRight="@dimen/common_right_margin"
        android:layout_marginTop="@dimen/common_top_margin"
        android:background="@drawable/input_bg2"
        android:focusable="true"
        android:gravity="center"
        android:hint="@string/stock_name_hint"
        android:paddingLeft="15dp"
        android:textColor="@color/text_color2"
        android:textColorHint="@color/hint_color1"
        android:textSize="@dimen/comom_txt_size_m" />


    <Button
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/common_left_margin"
        android:layout_marginRight="@dimen/common_right_margin"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_style2"
        android:focusable="true"
        android:text="@string/query"
        android:textColor="@color/white"
        android:textSize="@dimen/comom_txt_size_m" />

    <com.yunqi.fengle.ui.view.ExTableView
        android:id="@+id/tableViewEx"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp" />

</LinearLayout>