<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_bg1"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="28dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/logo2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="marquee"
                android:gravity="center"
                android:text="@string/select"
                android:textColor="@color/text_color1"
                android:textSize="14sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlayout_customer_contact"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_view_height"
            android:background="@color/dialog_bg2">

            <TextView
                android:id="@+id/txt_customer_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/customer_contact_table"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/check_customer_contact"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/checked" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlayout_sales_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_view_height">

            <TextView
                android:id="@+id/txt_sales_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:text="@string/sales_detail_table"
                android:textColor="@color/color_selector2"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/check_sales_detail"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/uncheck" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_view_height"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg4"
            android:text="@string/confirm"
            android:textColor="@color/color_selector2"
            android:textSize="@dimen/comom_txt_size_s" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_view_height"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg4"
            android:text="@string/quxiao"
            android:textColor="@color/color_selector2"
            android:textSize="@dimen/comom_txt_size_s" />
    </LinearLayout>

</LinearLayout>


