<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:background="@drawable/layout_bg1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style4"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingLeft="16dp"
            android:gravity="left|center_vertical"
            android:text="@string/commit"
            android:textColor="@color/color_selector2"
            android:textSize="@dimen/comom_txt_size_s" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/diver_coloer"/>
        <Button
            android:id="@+id/btn_temporary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style4"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingLeft="16dp"
            android:gravity="left|center_vertical"
            android:text="@string/temporary"
            android:textColor="@color/color_selector2"
            android:textSize="@dimen/comom_txt_size_s" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/diver_coloer"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style4"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingLeft="16dp"
            android:gravity="left|center_vertical"
            android:text="@string/drop"
            android:textColor="@color/color_selector2"
            android:textSize="@dimen/comom_txt_size_s" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/diver_coloer"/>

    </LinearLayout>

</RelativeLayout>